--- a/gallinga-frontend/package.json
+++ b/gallinga-frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
@@ -19,17 +20,19 @@
     "geist": "^1.4.2",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.518.0", 
-    "next": "15.3.4",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "next": "14.2.30",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-swipeable": "^7.0.2",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^24",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^20",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.30",
     "postcss": "^8.5.6",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
